<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <View
        style="@style/ViewStyle"
        android:id="@+id/view_blank"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_logo"
        style="@style/LottieAnimationViewStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1.5"
        app:lottie_repeatMode="reverse"
        app:lottie_rawRes="@raw/animation" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credentials_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:padding="@dimen/spacing_mlarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
               style="@style/LinearLayoutStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:text="@string/log_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id_or_contact_no"
                    app:hintTextColor="@color/dark_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:textColor="@color/black"
                        android:id="@+id/login_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/dark_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:textColor="@color/black"
                        android:id="@+id/login_password"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/remember_me_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:buttonTint="@color/black"
                        android:textColor="@color/dark_grey"
                        android:text="Remember Me"
                        tools:ignore="HardcodedText,RtlSymmetry" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/forgotclk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="4dp"
                        android:text="@string/forget_password"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        style="@style/ButtonStyle"
        android:id="@+id/login_button"
        android:text="@string/l_o_g_i_n"
        app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/don_t_have_an_account"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/grey_40"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:focusable="true" />

    <TextView
        android:id="@+id/login_signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/signup"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/trueblue"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/login_signup"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>
